======================
lovely.jsonrpc changes
======================

2009/04/07 0.0.1a4:
===================

- send an empty list as params if no params are given in proxy, this
  is not required by the spec but in some server side implementations

2009/01/23 0.0.1a3:
===================

- Added a transport for the client proxy that uses the urlfetch module
  of google appengine. This can be used to do make rpc calls from an
  appengine app.

2008/12/15 0.0.1a2:
===================

- session handling added


2008/12/08 0.0.1a1:
===================

Note: This was an internal release.

- initial release